src/test/ui/unsafe/unsafe-block-without-braces.stderr
error: expected `{`, found `std`
  --> $DIR/unsafe-block-without-braces.rs:3:9
   |
LL |     unsafe //{
   |           - expected `{`
LL |         std::mem::transmute::<f32, u32>(1.0);
   |         ^^^ unexpected token

error: aborting due to previous error

